--- a/iis_setting/웹서버 구축.md
+++ b/iis_setting/웹서버 구축.md
@@ -11,4 +11,4 @@
 1. IIS 관리자에서 '새 웹 플랫폼 구성 요소 가져오기' 클릭하면 '웹 플랫폼 설치 관리자' 메뉴가 생기게 된다.
 
 2. 관리자 실행후, [제품] 탭에서 아래 이미지의 프로그램들을 설치한다.
-![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img2.jpg)
+![](/img/img2.jpg)
