--- a/iis_setting/웹서버 구축.md
+++ b/iis_setting/웹서버 구축.md
@@ -12,3 +12,12 @@
 
 2. 관리자 실행후, [제품] 탭에서 아래 이미지의 프로그램들을 설치한다.
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img3.jpg)
+
+3. 프로그램을 모두 설치하고나면, 아래와 같이 'PHP Manager'가 생성된 것을 볼 수 있다.
+![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img4.png)
+
+또한, 프로그램 폴더에 PHP폴더가 생성된다.
+![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img6.png)
+
+4. [Register new PHP version] 을 클릭해서 [php-cgi.exe]가 있는 폴더 경로를 넣어준다.
+![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img5.png)
