--- a/iis_setting/웹서버 구축.md
+++ b/iis_setting/웹서버 구축.md
@@ -10,13 +10,13 @@
 ### PHP 설치
 1. IIS 관리자에서 '새 웹 플랫폼 구성 요소 가져오기' 클릭하면 '웹 플랫폼 설치 관리자' 메뉴가 생기게 된다.
 
-2. 관리자 실행후, [제품] 탭에서 아래 이미지의 프로그램들을 설치한다.
+2. 관리자 실행후, [제품] 탭에서 아래 이미지의 프로그램들을 설치한다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img3.jpg)
 
-3. 프로그램을 모두 설치하고나면, 아래와 같이 'PHP Manager'가 생성된 것을 볼 수 있다.
+3. 프로그램을 모두 설치하고나면, 아래와 같이 'PHP Manager'가 생성된 것을 볼 수 있다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img10.png)
 
-또한, 프로그램 폴더에 PHP폴더가 생성된다.
+또한, 프로그램 폴더에 PHP폴더가 생성된다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img8.png)
 
 4. [Register new PHP version] 을 클릭해서 [php-cgi.exe]가 있는 폴더 경로를 넣어준다.
