--- a/iis_setting/웹서버 구축.md
+++ b/iis_setting/웹서버 구축.md
@@ -16,8 +16,11 @@
 3. 프로그램을 모두 설치하고나면, 아래와 같이 'PHP Manager'가 생성된 것을 볼 수 있다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img10.png)
 
-또한, 프로그램 폴더에 PHP폴더가 생성된다.<br>
+  또한, 프로그램 폴더에 PHP폴더가 생성된다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img8.png)
 
 4. [Register new PHP version] 을 클릭해서 [php-cgi.exe]가 있는 폴더 경로를 넣어준다.
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img9.png)
+
+5. [Check phpinfo()] 클릭해서 아래와 같이 php 정보 페이지가 뜬다면 잘 설치된 것이다.
+![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img11.png)
