--- a/iis_setting/웹서버 구축.md
+++ b/iis_setting/웹서버 구축.md
@@ -8,7 +8,7 @@
 2. [윈도우] > IIS를 입력하여 'IIS(인터넷 정보 서비스) 관리자'를 실행한다.
 
 ### PHP 설치
-1. IIS 관리자에서 '새 웹 플랫폼 구성 요소 가져오기' 클릭하면 '웹 플랫폼 설치 관리자' 메뉴가 생기게 된다.
+1. IIS 관리자에서 '새 웹 플랫폼 구성 요소 가져오기' 클릭하면 '웹 플랫폼 설치 관리자' 메뉴가 생기게 된다.<br>
 
 2. 관리자 실행후, [제품] 탭에서 아래 이미지의 프로그램들을 설치한다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img3.jpg)
@@ -19,8 +19,23 @@
   또한, 프로그램 폴더에 PHP폴더가 생성된다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img8.png)
 
-4. [Register new PHP version] 을 클릭해서 [php-cgi.exe]가 있는 폴더 경로를 넣어준다.
+4. php.ini 파일 수정
+php가 설치된 폴더로 들어가서 아래 2개의 파일 중 아무 파일을 복사해서 php.ini 파일로 만들어준다.
+주석(;)으로 되어있다면 ;를 삭제해서 주석을 풀어준다. 변경할 코드는 아래와 같다.
+![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img12.png)
+
++ default_charser = "UTF-8"
++ date.timezone = "Asia/Seoul"
++ short_open_tag = On
++ extension_dir = ".\ext"
++ log_errors = On
++ cgi.force_redirect = 0 : 이걸 1로 해두면 IIS에서 PHP가 죽는다고 하니 0으로 설정 요망 
++ cgi_fix_pathinfo = 1 
++ fastcgi.impersonate = 1 
++ fastcgi.loggin = 0 : 이것도 설정해 두지 않으면, IIS에선 계속 HTTP500 에러가 난다고 한다.
+
+5. [Register new PHP version] 을 클릭해서 [php-cgi.exe]가 있는 폴더 경로를 넣어준다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img9.png)
 
-5. [Check phpinfo()] 클릭해서 아래와 같이 php 정보 페이지가 뜬다면 잘 설치된 것이다.
+6. [Check phpinfo()] 클릭해서 아래와 같이 php 정보 페이지가 뜬다면 잘 설치된 것이다.<br>
 ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img11.png)
