--- a/iis_setting/웹서버 구축.md
+++ b/iis_setting/웹서버 구축.md
@@ -39,3 +39,10 @@
 <br><br>
 6. [Check phpinfo()] 클릭해서 아래와 같이 php 정보 페이지가 뜬다면 잘 설치된 것이다.<br>
   ![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img11.png)
+
+### 만약, 500 에러가 뜬다면?
+프로젝트 로컬 경로에서 .php파일 호출여부를 확인해보자.<br>
+일부 프로젝트에서는 외부 경로에서 다운받게끔 되어있어, 로컬에서는 불러올 php파일이 없는 경우가 있다.<br>
+헤더, 푸터 등을 단순히 php를 활용해서 html에 include 하는 형태라면, 아래와 같이 [처리기 매핑]을 수정해야 한다.<br>
+<br>
+![](https://raw.githubusercontent.com/vlueviolet/vlueviolet.github.io/master/iis_setting/img/img13.png)
