--- a/study/hivelab/code_squad/2. 클린코드_테스트코드.md
+++ b/study/hivelab/code_squad/2. 클린코드_테스트코드.md
@@ -128,6 +128,8 @@ https://goo.gl/WUp7Cf
 
 
 
+### 리팩토링
+중첩을 없애라
 
 
 
@@ -297,7 +299,7 @@ jest framework를 활용해서 unit test를 실습.
 
  https://hackernoon.com/javascript-testing-tools-survey-2018-the-results-are-in-732017a00a9c#ae8f
 
-React 프레임워크 테스트를 목적으로 시작됐으나, Mock과 snapshot등의 기능으로  React이외 환경에서도 사용가능.
+React 프레임워크 테스트를 목적으로 시작됐으나, Mock과 snapshot등의 기능으로 React이외 환경에서도 사용가능.
 
 
 
@@ -343,7 +345,7 @@ ES Modules 사용을 위해 preset-env를 설정하자.
 
 ```
 
-이후에 
+이후에
 ```shell
 > sudo npm install
 ```
