--- a/study/storybook/src/component/Header/Header.stories.mdx
+++ b/study/storybook/src/component/Header/Header.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import Header from './Header';
 
-<Meta title="Example/Header" component={Header} />
+<Meta title="Component/Header" component={Header} />
 
 export const Template = (args) => <Header {...args} />;
 
