--- a/study/storybook/src/component/Header/Header.stories.mdx
+++ b/study/storybook/src/component/Header/Header.stories.mdx
@@ -1,19 +1,14 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import Header from './Header';
 
-<Meta title='Component/Header' component={Header} />
+<Meta title="Component/Header" component={Header} />
 
 export const Template = (args) => <Header {...args} />;
 
 <Canvas>
   <Story
-    name='Basic'
+    name="Basic"
     parameters={{
-      assets: [
-        'path/to/your/asset.png',
-        'path/to/another/asset.png',
-        'path/to/yet/another/asset.png'
-      ]
     }}
   >
     {Template.bind({})}
