--- a/study/storybook/src/component/Header/Header.stories.mdx
+++ b/study/storybook/src/component/Header/Header.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { action } from '@storybook/addon-actions';
 import Header from './Header';
 
 <Meta title="Component/Header" component={Header} />
