--- a/study/storybook/src/component/Button/index.stories.mdx
+++ b/study/storybook/src/component/Button/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
-import Button from './Button';
+import Button from './index';
 
 <Meta
   title="Component/Button"
