--- a/study/storybook/src/component/Header/Header.stories.mdx
+++ b/study/storybook/src/component/Header/Header.stories.mdx
@@ -6,10 +6,18 @@ import Header from './Header';
 
 export const Template = (args) => <Header {...args} />;
 
+# Header
+
+> Header 컴포넌트 입니다.
+
+<br />
+
+## 기본 화면
+
 <Canvas>
   <Story name="Basic">{Template.bind({})}</Story>
 </Canvas>
 
-# 안녕하세요
+## props table
 
 <ArgsTable of={Header} />
