--- a/study/storybook/src/component/Header/index.stories.mdx
+++ b/study/storybook/src/component/Header/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
-import Header from './Header';
+import Header from './index';
 
 <Meta title="Component/Header" component={Header} />
 
