--- a/study/storybook/src/component/InputText/index.stories.mdx
+++ b/study/storybook/src/component/InputText/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
-import InputText from './InputText';
+import InputText from './index';
 
 <Meta
   title="Component/InputText"
