--- a/study/storybook/src/component/ProfileThumbnail/index.stories.mdx
+++ b/study/storybook/src/component/ProfileThumbnail/index.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
-import ProfileThumbnail from './ProfileThumbnail';
+import ProfileThumbnail from './index';
 
 <Meta title="Component/ProfileThumbnail" component={ProfileThumbnail} />
 
